# tree-sitter-language-pack

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .lychee.toml  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .rumdl.toml  .sdkmanrc  .textlintrc.json  .typos.toml  ATTRIBUTIONS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  Taskfile.yml  alef.toml  composer.json  config.m4  deny.toml  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poly.toml  pyproject.toml  rust-toolchain.toml  rustfmt.toml  tsconfig.json  zensical.toml
.ai-rulez/: .generated-manifest.json  config.toml
.ai-rulez/agents/: grammar-engineer.md
.ai-rulez/rules/: typescript-conventions.md
.cargo/: config.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci-cli.yaml  ci-dart.yaml  ci-docker.yaml  ci-e2e.yaml  ci-mobile.yaml  ci-rust.yaml  ci-swift.yaml  ci-validate.yaml  ci-zig.yaml  ci.yaml  (+7 more)
.task/: c.yml  csharp.yml  dart.yml  elixir.yml  go.yml  java.yml  kotlin-android.yml  node.yml  php.yml  python.yml  ruby.yml  rust.yml  swift.yml  test-apps.yml  version.yml  wasm.yml  zig.yml
cli-proxy/pypi/: README.md  pyproject.toml
cli-proxy/pypi/ts_pack_cli/: __init__.py  cli.py  downloader.py
crates/ts-pack-cli/: Cargo.toml  README.md
crates/ts-pack-cli/src/: main.rs
crates/ts-pack-cli/src/commands/: mcp.rs  mod.rs
crates/ts-pack-cli/tests/: mcp_test.rs
crates/ts-pack-core/: Cargo.toml  README.md  build.rs  language_definitions.json
crates/ts-pack-core-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/ts-pack-core-ffi/cmake/: ts-pack-core-ffi-config.cmake
crates/ts-pack-core-ffi/include/: ts_pack.h
crates/ts-pack-core-ffi/src/: lib.rs
crates/ts-pack-core-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/ts-pack-core-node/npm/darwin-arm64/: README.md  package.json
crates/ts-pack-core-node/npm/darwin-x64/: README.md  package.json
crates/ts-pack-core-node/npm/linux-arm64-gnu/: README.md  package.json
crates/ts-pack-core-node/npm/linux-arm64-musl/: README.md  package.json
crates/ts-pack-core-node/npm/linux-x64-gnu/: README.md  package.json
crates/ts-pack-core-node/npm/linux-x64-musl/: README.md  package.json
crates/ts-pack-core-node/npm/win32-arm64-msvc/: README.md  package.json
crates/ts-pack-core-node/npm/win32-x64-msvc/: README.md  package.json
crates/ts-pack-core-node/src/: lib.rs
crates/ts-pack-core-php/: Cargo.toml
crates/ts-pack-core-php/src/: composer.json  lib.rs  phpstan.neon
crates/ts-pack-core-py/: Cargo.toml
crates/ts-pack-core-py/src/: lib.rs  pyproject.toml
crates/ts-pack-core/benches/: benchmarks.rs
crates/ts-pack-core/src/: config.rs  definitions.rs  download.rs  error.rs  extensions.rs  extract.rs  json_utils.rs  lib.rs  node.rs  pack_config.rs  parse.rs  parsing.rs  process_config.rs  queries.rs  query.rs  query_cache.rs  registry.rs  text_splitter.rs
crates/ts-pack-core/src/intel/: chunking.rs  data_extraction.rs  elixir.rs  intelligence.rs  mod.rs  types.rs
crates/ts-pack-core/tests/: concurrent_download.rs  kdl_repro.rs  parsing.rs  wire_format.rs
crates/ts-pack-core/tests/snapshots/: wire_format__chunk_context_shape.snap  wire_format__code_chunk_shape.snap  wire_format__comment_info_shape.snap  wire_format__comment_kind_serializes_as_bare_string-2.snap  wire_format__comment_kind_serializes_as_bare_string-3.snap  wire_format__comment_kind_serializes_as_bare_string.snap  wire_format__diagnostic_severity_serializes_as_bare_string-2.snap  wire_format__diagnostic_severity_serializes_as_bare_string-3.snap  wire_format__diagnostic_severity_serializes_as_bare_string.snap  wire_format__diagnostic_shape.snap  wire_format__doc_section_shape.snap  wire_format__docstring_format_other_serializes_as_single_keyed_object.snap  wire_format__docstring_format_unit_variant_serializes_as_bare_string-2.snap  wire_format__docstring_format_unit_variant_serializes_as_bare_string-3.snap  wire_format__docstring_format_unit_variant_serializes_as_bare_string-4.snap  wire_format__docstring_format_unit_variant_serializes_as_bare_string-5.snap  wire_format__docstring_format_unit_variant_serializes_as_bare_string.snap  wire_format__docstring_info_shape.snap  wire_format__export_info_shape.snap  wire_format__export_kind_serializes_as_bare_string-2.snap  wire_format__export_kind_serializes_as_bare_string-3.snap  wire_format__export_kind_serializes_as_bare_string.snap  wire_format__file_metrics_shape.snap  wire_format__import_info_shape.snap  wire_format__process_config_shape.snap  wire_format__process_result_shape.snap  wire_format__span_shape.snap  wire_format__structure_item_shape.snap  wire_format__structure_item_with_other_kind_shape.snap  wire_format__structure_kind_other_serializes_as_single_keyed_object.snap  wire_format__structure_kind_unit_variant_serializes_as_bare_string-10.snap  wire_format__structure_kind_unit_variant_serializes_as_bare_string-2.snap  wire_format__structure_kind_unit_variant_serializes_as_bare_string-3.snap  wire_format__structure_kind_unit_variant_serializes_as_bare_string-4.snap  wire_format__structure_kind_unit_variant_serializes_as_bare_string-5.snap  wire_format__structure_kind_unit_variant_serializes_as_bare_string-6.snap  wire_format__structure_kind_unit_variant_serializes_as_bare_string-7.snap  wire_format__structure_kind_unit_variant_serializes_as_bare_string-8.snap  wire_format__structure_kind_unit_variant_serializes_as_bare_string-9.snap  wire_format__structure_kind_unit_variant_serializes_as_bare_string.snap  (+10 more)
docker/: Dockerfile
docs/: CHANGELOG.md  contributing.md  ecosystem.md  index.md  languages.md  llms.txt  robots.txt
fixtures/: schema.json
scripts/: build_e2e_manifest.py  check_grammar_updates.py  clone_vendors.py  generate_grammar_table.py  generate_supported_languages.py  lint_grammar_licenses.py  pin_vendors.py  setup-swift-bridge.sh
sources/: language_definitions.json  license_cache.json
(+1517 files in other folders)
