[workspace]
members = ["crates/*", "packages/dart/rust", "packages/swift/rust"]
exclude = [
    "crates/tree-sitter-language-pack-ffi",
    "crates/tree-sitter-language-pack-wasm",
    "crates/ts-pack-elixir",
    "crates/ts-pack-java",
    "crates/ts-pack-node",
    "crates/ts-pack-php",
    "e2e/rust",
    "packages/elixir/native/tree_sitter_language_pack_nif",
    "packages/ruby/ext/ts_pack_core_rb/native",
    "test_apps/rust",
]
resolver = "2"

[workspace.package]
version = "1.11.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/xberg-io/tree-sitter-language-pack"
homepage = "https://xberg.io"
authors = ["Na'aman Hirschfeld <naaman@xberg.io>"]
description = "A comprehensive tree-sitter language pack with polyglot bindings"
keywords = ["tree-sitter", "parser", "syntax", "language-pack", "xberg"]

[workspace.dependencies]
ahash = { version = "0.8", default-features = false, features = [
    "std",
    "compile-time-rng",
    "serde",
] }
axum = { version = "0.8", features = ["macros"] }
cbindgen = "0.29"
cc = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
criterion = { version = "0.8", features = ["html_reports"] }
dirs = "6"
fd-lock = "4"
js-sys = "0.3"
libloading = "0.9"
magnus = "0.8"
memchr = "2"
napi = { version = "3", features = ["napi4", "serde-json"] }
napi-build = "2"
napi-derive = "3"
pyo3 = { version = "0.29", features = ["abi3-py310"] }
rayon = "1"
rb-sys = "0.9"
regex = "1"
rmcp = { version = "1.8", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
    "server-side-http",
] }
rustler = "0.38"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
toml = "1.1"
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26"
tree-sitter-language-pack = { path = "crates/ts-pack-core" }
ureq = { version = "3", features = ["platform-verifier", "socks-proxy"] }
walkdir = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
zstd = "0.13"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
duplicated_attributes = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(alef)'] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
