[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "tree-sitter-language-pack"
version = "1.12.3"
description = "Comprehensive collection of 306 tree-sitter language parsers with polyglot bindings"
readme = "README.md"
keywords = ["ast", "code", "parser", "parsing", "syntax", "text-processing", "tree-sitter", "xberg"]
license = "MIT"
authors = [{ name = "Na'aman Hirschfeld", email = "naaman@xberg.io" }]
requires-python = ">=3.10.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
urls.documentation = "https://github.com/xberg-io/tree-sitter-language-pack#readme"
urls.homepage = "https://github.com/xberg-io/tree-sitter-language-pack"
urls.issues = "https://github.com/xberg-io/tree-sitter-language-pack/issues"
urls.repository = "https://github.com/xberg-io/tree-sitter-language-pack"

[dependency-groups]
dev = [
    "anyio>=4.10.0",
    "gitpython>=3.1.45",
    "jinja2>=3.1.0",
    "pyrefly>=1.1.1",
    "pytest>=9.0.0",
    "pyyaml>=6.0.0",
    "tomli>=2.2.1; python_version<'3.11'",
    "typing-extensions>=4.15.0",
    "uv-bump",
]
doc = ["zensical"]

[tool.hatch]
build.targets.wheel.packages = ["scripts"]

[tool.codespell]
ignore-words-list = "wast,inout,wit,abl"

[tool.uv]
sources.uv-bump = { git = "https://github.com/Goldziher/uv-bump" }
