[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ts-pack-cli"
version = "0.1.0"
description = "CLI proxy for ts-pack — downloads and runs the native ts-pack binary from GitHub releases."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Na'aman Hirschfeld", email = "naaman@kreuzberg.dev" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/kreuzberg-dev/tree-sitter-language-pack"
Repository = "https://github.com/kreuzberg-dev/tree-sitter-language-pack.git"
Issues = "https://github.com/kreuzberg-dev/tree-sitter-language-pack/issues"

[project.scripts]
ts-pack = "ts_pack_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ts_pack_cli"]
