[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "ts-pack-cli"
version = "0.1.0"
description = "CLI proxy for ts-pack — downloads and runs the native ts-pack binary from GitHub releases."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Na'aman Hirschfeld", email = "naaman@xberg.io" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

urls.Homepage = "https://github.com/xberg-io/tree-sitter-language-pack"
urls.Issues = "https://github.com/xberg-io/tree-sitter-language-pack/issues"
urls.Repository = "https://github.com/xberg-io/tree-sitter-language-pack.git"
scripts.ts-pack = "ts_pack_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = [ "ts_pack_cli" ]
