[package]
name = "ts-pack-core-ffi"
version = "1.12.1"
edition = "2021"
license = "MIT"
description = "Pre-compiled tree-sitter grammars for 306 programming languages"
readme = false
keywords = ["language-pack", "parser", "syntax", "tree-sitter"]
categories = []
repository = "https://github.com/xberg-io/tree-sitter-language-pack"

# `serde_json`, `ahash`, and `tokio` are emitted unconditionally above so the
# manifest is stable across regens (and so the C FFI codegen can pull them in
# when an async / Result-typed function appears in the API surface), but for
# umbrella crates with no async fns and no JSON-marshalled return types they
# are genuinely unused. The conditional `async-trait` / `futures-util` deps
# are similarly flagged when the umbrella has trait-bridge / streaming adapters
# configured but no actual async-trait / async-stream callsite in the generated
# FFI shim.
[package.metadata.cargo-machete]
ignored = ["ahash", "serde_json", "tokio"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["config", "download"]
config = ["tree-sitter-language-pack/config"]
download = ["tree-sitter-language-pack/download"]

[dependencies]
ahash = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.26"
tree-sitter-language-pack = { path = "../ts-pack-core", version = "1.12.1", features = ["serde", "config", "download"] }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"
