[package]
name = "ts-pack-core-node"
version = "1.8.0-rc.25"
edition = "2024"
license = "MIT"
description = "Pre-compiled tree-sitter grammars for 305 programming languages"
readme = false
keywords = ["tree-sitter", "parser", "syntax", "language-pack"]
categories = ["text-processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["async"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter-language-pack = { path = "../ts-pack-core", features = ["download", "serde", "config"] }

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
