[package]
name = "ts-pack-core-py"
version = "1.8.1"
edition = "2024"
license = "MIT"
description = "Pre-compiled tree-sitter grammars for 305 programming languages"
readme = false
keywords = ["tree-sitter", "parser", "syntax", "language-pack"]
categories = ["text-processing"]

# `pyo3-async-runtimes` and `serde_json` are emitted unconditionally above so
# the manifest is stable across regens, but for umbrella crates with no
# async fns or no JSON-marshalled return types they are genuinely unused.
# List them here so `cargo machete` doesn't flag the no-async-no-json case
# as a real finding.
[package.metadata.cargo-machete]
ignored = ["pyo3-async-runtimes", "serde_json"]

[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py310"]

[dependencies]
pyo3 = { version = "0.28" }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter-language-pack = { path = "../ts-pack-core", features = ["serde", "config", "download"] }
