[package]
name = "ts-pack-core-py"
version = "1.9.0-rc.34"
edition = "2024"
license = "MIT"
description = "Pre-compiled tree-sitter grammars for 306 programming languages"
readme = false
keywords = ["language-pack", "parser", "syntax", "tree-sitter"]
categories = []

# `serde_json` is emitted unconditionally above so the manifest is stable
# across regens, but for umbrella crates with no JSON-marshalled return
# types it is genuinely unused. The conditional `async-trait` / `tokio` /
# `futures` deps are similarly flagged when the umbrella has trait-bridge
# / streaming adapters configured but no actual async callsite in the
# generated PyO3 shim.
[package.metadata.cargo-machete]
ignored = ["serde_json"]

[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py310"]

[dependencies]
pyo3 = { version = "0.29" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter-language-pack = { version = "1.9.0-rc.34", path = "../ts-pack-core", features = ["serde", "config", "download"] }
