[package]
name = "ts-pack-core-py"
version = "1.12.1"
edition = "2024"
license = "MIT"
description = "Pre-compiled tree-sitter grammars for 306 programming languages"
readme = false
keywords = ["language-pack", "parser", "syntax", "tree-sitter"]
categories = []

# `pyo3-async-runtimes` and `serde_json` are emitted unconditionally above so
# the manifest is stable across regens, but for umbrella crates with no
# async fns or no JSON-marshalled return types they are genuinely unused.
# The conditional `async-trait` / `tokio` / `futures` deps are similarly
# flagged when the umbrella has trait-bridge / streaming adapters configured
# but no actual async-trait / async callsite in the generated PyO3 shim.
[package.metadata.cargo-machete]
ignored = ["pyo3-async-runtimes", "serde_json"]

[lib]
name = "_native"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py310"]

[dependencies]
pyo3 = { version = "0.29" }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter-language-pack = { version = "1.12.1", path = "../ts-pack-core", features = ["serde", "config", "download"] }
